--- a/CM2.ipynb
+++ b/CM2.ipynb
@@ -184,7 +184,7 @@
         "### Ruina del Jugador\n",
         "![](https://upload.wikimedia.org/wikipedia/commons/a/a4/13-02-27-spielbank-wiesbaden-by-RalfR-093.jpg)\n",
         "\n",
-        "Un jugador juega cierto juego de apuestas, en el que gana \\$1 con probabilidad $p$ y pierde \\$1 con probabilidad $1-p$ y puede ganar a lo más \\$d. Podemos pensar entonces su dinero en la partida n como una variable aleatoria, entonces obtenemos una sucesión $\\{X_n\\}_{n\\in \\mathbb{N}}$ con la siguiente distribución:\n",
+        "Un jugador juega cierto juego de apuestas, en el que gana 1 con probabilidad $p$ y pierde 1 con probabilidad $1-p$ y puede ganar a lo más d. Podemos pensar entonces su dinero en la partida n como una variable aleatoria, entonces obtenemos una sucesión $\\{X_n\\}_{n\\in \\mathbb{N}}$ con la siguiente distribución:\n",
         "\n",
         "$$\n",
         "\\mathbb{P}[X_n = j] =\n",
