--- a/CM3.ipynb
+++ b/CM3.ipynb
@@ -146,17 +146,18 @@
         "import sympy as sp\n",
         "from numpy.linalg import matrix_power\n",
         "\n",
-        "# Definir las variables simbólicas\n",
+        "# Definimos variables simbólicos\n",
         "p = sp.Symbol('p')\n",
         "q = sp.Symbol('q')\n",
         "\n",
-        "# Crear la matriz P simbólica\n",
+        "# Definimos la matriz P\n",
         "P = np.array([\n",
         "    [0, p, 0, q],\n",
         "    [q, 0, p, 0],\n",
         "    [0, q, 0, p],\n",
         "    [p, 0, q, 0]\n",
         "])\n",
+        "# Imprimimos su cuadrado y su cubo\n"
         "print('P^2 =', matrix_power(P,2), '\\n\\n P^3 =',matrix_power(P, 3))"
       ],
       "metadata": {
