--- a/CM5_DistribucionesEstacionarias.ipynb
+++ b/CM5_DistribucionesEstacionarias.ipynb
@@ -78,7 +78,7 @@
         "id": "TcKfq00z6KME",
         "outputId": "76d5014b-822f-44c3-841c-58748b0b9259"
       },
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -133,7 +133,7 @@
         "id": "VhWIAirn99ih",
         "outputId": "02da9f2d-cd0c-4ad8-8081-a2b67c41a5a5"
       },
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -206,7 +206,7 @@
         "id": "xNQPpS1M-erM",
         "outputId": "cae71783-b602-4642-a8cf-bbc999f634e1"
       },
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -314,13 +314,12 @@
         "        distribuciones.append(pi_n)\n",
         "        pi_0 = pi_n\n",
         "    return distribuciones\n",
-        "\n",
-        ""
+        "\n"
       ],
       "metadata": {
         "id": "TYetijOv6E1Q"
       },
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -357,7 +356,7 @@
         "id": "OnyLXILg_8EY",
         "outputId": "2a4c654c-1d10-44ca-8491-728fe2d80486"
       },
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -410,7 +409,7 @@
         "id": "NtMvg569A_Zg",
         "outputId": "d97c690c-8fb3-4717-a5eb-d05fbede9847"
       },
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -431,7 +430,7 @@
         "\n",
         "$$ \\pi = (\\frac{1}{5}, \\frac{2}{5}, \\frac{2}{5}) = (0.2, 0.4, 0.4) $$\n",
         "\n",
-        "¿Tendrán que ver algo el recíproco del tiempo medio de retorno con la distribución estacionaria?\n",
+        "Esto concuerda con que la distribución estacionaria es el recíproco del tiempo medio de retorno.\n",
         "\n",
         "Con el ejemplo anterior, teníamos la cadena de Markov con matriz de transición\n",
         "\n",
@@ -464,7 +463,7 @@
         "id": "7o2B56Y9CiJW",
         "outputId": "93c13683-3245-456c-ee81-eca6002ec747"
       },
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -479,9 +478,10 @@
     {
       "cell_type": "markdown",
       "source": [
-        "Parece que sí :)\n",
+        "¡También concuerda con el resultado teórico!\n",
         "\n",
-        "Por último, analicemos la cadena de Markov con matriz de transición\n",
+        "**Ejemplo**\n",
+        "analicemos la cadena de Markov con matriz de transición\n",
         "\n",
         "\\begin{pmatrix}\n",
         "1 & 0 & 0 \\\\\n",
@@ -514,7 +514,7 @@
         "id": "AD94W8fuuYiP",
         "outputId": "95cddac0-1b7e-4b8f-a41f-d8552bfe6f13"
       },
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -553,13 +553,13 @@
         "cadena_prueba4.distribuciones(10)"
       ],
       "metadata": {
-        "id": "8K0FLeoSvOTy",
-        "outputId": "d9b20256-36c9-416f-db8f-fd7014735e2a",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "8K0FLeoSvOTy",
+        "outputId": "d9b20256-36c9-416f-db8f-fd7014735e2a"
       },
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -581,6 +581,141 @@
           "execution_count": 11
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Finalmente, actualizaremos el código usado de la clase CadenadeMarkov para incluir el cálculo de la distribución estacionaria dada una distribución inicial. Como ya calculamos el tiempo medio de retorno, esta será una aproximación sencilla."
+      ],
+      "metadata": {
+        "id": "1I7Mcfiji3Cv"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "class CadenaMarkov:\n",
+        "\n",
+        "  # Definimos el constructor de la clase\n",
+        "  def __init__(self, P, pi_0):\n",
+        "    self.P = P\n",
+        "    self.pi_0 = pi_0\n",
+        "    self.estados = list(range(len(pi_0))) # Nuevo: Definimos el espacio de estados\n",
+        "    self.proceso = [np.random.choice(range(len(pi_0)), p = pi_0)]\n",
+        "\n",
+        "  # Simulamos la cadena igual que antes\n",
+        "  def simular(self, iter):\n",
+        "    for i in range(iter):\n",
+        "      estado_actual = self.proceso[-1]\n",
+        "      xn = np.random.choice(range(len(self.pi_0)), p = self.P[estado_actual])\n",
+        "      self.proceso.append(int(xn))\n",
+        "    return self.proceso\n",
+        "\n",
+        "  # Graficamos la trayectoria generada de nuestro proceso\n",
+        "  def plot(self, co):\n",
+        "    plt.figure(figsize=(7,4))\n",
+        "    plt.plot(self.proceso, '-', color = co, ms=1)\n",
+        "    plt.style.use('seaborn-v0_8-dark')\n",
+        "    plt.grid()\n",
+        "    plt.title('Cadena de Markov')\n",
+        "    plt.xlabel('Iteración')\n",
+        "    plt.ylabel('Estado')\n",
+        "    plt.show()\n",
+        "\n",
+        "  # Función para calcular m_y, recibe iteraciones de cada trayectoria y número de trayectorias\n",
+        "  def Tiempos_retorno(self, y, iter, trayectorias):\n",
+        "    # Verificamos que el estado esté en el conjunto de estados\n",
+        "    if not y in self.estados:\n",
+        "      return None\n",
+        "    else:\n",
+        "      muestra = []\n",
+        "      # Generamos tantas trayectorias como indiquemos\n",
+        "      for _ in range(trayectorias):\n",
+        "        # Generamos una trayectoria que empiece en el estado que queremos\n",
+        "        cadena_y = CadenaMarkov(self.P, [1 if i == y else 0 for i in range(len(self.pi_0))])\n",
+        "        # Simulamos la trayectoria\n",
+        "        cadena_y.simular(iter)\n",
+        "        # Verificamos el tiempo de retorno de esa trayectoria y lo añadimos a la lista muestra\n",
+        "        for t in range(1, len(cadena_y.proceso)):\n",
+        "          if cadena_y.proceso[t] == y:\n",
+        "            muestra.append(t)\n",
+        "            break\n",
+        "      # Si todo sale bien, devolvemos la media muestral de la muestra de T_y\n",
+        "      if muestra:\n",
+        "        return sum(muestra) / len(muestra)\n",
+        "      else:\n",
+        "        return None\n",
+        "\n",
+        "  def distribucion_estacionaria(self):\n",
+        "    est = []\n",
+        "    for estado in self.estados:\n",
+        "      cadena_estado = CadenaMarkov(self.P, self.pi_0)\n",
+        "      est.append(cadena_estado.Tiempos_retorno(estado, 1000, 1000))\n",
+        "    est = 1 / np.array(est)\n",
+        "    return est\n"
+      ],
+      "metadata": {
+        "id": "UnAepFUwjG49"
+      },
+      "execution_count": 4,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Ahora probemos nuestro código con uno de los ejemplos anteriores."
+      ],
+      "metadata": {
+        "id": "Li2k0JBOj9jw"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import numpy as np\n",
+        "import matplotlib.pyplot as plt\n",
+        "import random\n",
+        "P1 = np.array([[0, 0.5, 0.5],\n",
+        "               [0.25, 0.5, 0.25],\n",
+        "               [.25, 0.25, 0.5]])\n",
+        "\n",
+        "cadena_prueba = CadenaMarkov(P1, [1,0,0])\n",
+        "cadena_prueba.distribucion_estacionaria()"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "31o7Z6r9kEbl",
+        "outputId": "3e4feee3-5481-4e5d-fbd1-37c91b562b1c"
+      },
+      "execution_count": 6,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "array([0.1993223 , 0.41946309, 0.41186161])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 6
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "¡Nuestro código funciona!\n",
+        "\n",
+        "**Ejercicio**\n",
+        "\n",
+        "1. Calcula la distribución estacionaria de una cadena de Markov de dos estados con $a,b \\in (0,1)$ fijos.\n",
+        "2. Haz una función en Python que reciba como parámetros $a,b \\in (0,1)$ y devuelva la distribución estacionaria de una cadena de Markov de dos estados."
+      ],
+      "metadata": {
+        "id": "-XMAG3cAkf-S"
+      }
     }
   ]
 }
