--- a/CM6_DistribuciónLímite.ipynb
+++ b/CM6_DistribuciónLímite.ipynb
@@ -39,7 +39,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 13,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -119,7 +119,7 @@
         "id": "SSqhgKYCrFkQ",
         "outputId": "b43bc5a4-4c45-42cd-9b33-aaa934d4944c"
       },
-      "execution_count": 26,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -259,7 +259,7 @@
       "metadata": {
         "id": "tGALdwPOtEKk"
       },
-      "execution_count": 39,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -293,7 +293,7 @@
         "id": "ZlxR89S8t9n4",
         "outputId": "5a537020-492c-4e9a-ee37-8c93f14a81d3"
       },
-      "execution_count": 40,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -326,7 +326,7 @@
         "id": "kjZKZ_rYuypS",
         "outputId": "33b14fe8-b8ac-4f99-e7ad-b7640362f3f5"
       },
-      "execution_count": 27,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -415,7 +415,7 @@
         "id": "3P8aOKxexaEz",
         "outputId": "0f1e7aeb-5fa9-4140-f22c-a1e37c763cc0"
       },
-      "execution_count": 43,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -449,7 +449,7 @@
         "id": "4JZSwRHdyB3Y",
         "outputId": "1e849fcf-ee74-473f-b22e-7f1b754f53b5"
       },
-      "execution_count": 44,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -496,15 +496,15 @@
         "\n",
         "Si las últimas dos películas que viste fueron de amor, entonce estás en el estado $AA$, y con probabilidad $\\frac{3}{4}$ pasas al estado $AA$ de nuevo, pues ves otra película de amor.\n",
         "\n",
-        "Si las últimas dos películas que viste fueron de amor y de terror, entonces estás en el estado $AT$, y solo puedes pasar con probabilidad positiva a los estados $TA$ o $TT$, y a los demás pasas con probabilidad $\\frac{1}{2}$.\n",
+        "Si las últimas dos películas que viste fueron de amor y de terror, entonces estás en el estado $AT$, y solo puedes pasar con probabilidad positiva a los estados $TA$ o $TT$ cada uno con probabilidad $\\frac{1}{2}, y a los demás pasas con probabilidad 0.\n",
         "\n",
-        "Es decir, la notación $AA$, $AT$, $TA$, $TT$ indica el género de las últimas dos películas que viste, por lo que el siguiente estado será el género de la película anterior y el género de la película que estás viendo anteriormente.\n",
+        "Es decir, la notación $AA$, $AT$, $TA$, $TT$ indica el género de las últimas dos películas que viste, por lo que el siguiente estado será el género de la película anterior y el género de la película que estás viendo actualmente.\n",
         "\n",
         "Observa que el segundo dígito del estado anterior debe ser siempre el primero del estado actual.\n",
         "\n",
         "2. Clasifica los estados de la cadena.\n",
-        "3. En caso de que la cadena tenga distribución estacionaria, encuéntrala.\n",
-        "4. En caso de que la cadena tenga distribución límite, encuéntrala.\n",
+        "3. En caso de que la cadena tenga distribución estacionaria, encuéntrala numéricamente.\n",
+        "4. En caso de que la cadena tenga distribución límite, encuéntrala numéricamente.\n",
         "\n",
         "¿Qué género de película es el que más verá la familia a largo plazo?\n",
         "\n"
