--- a/MB1_MovimientoBrowniano.ipynb
+++ b/MB1_MovimientoBrowniano.ipynb
@@ -269,6 +269,12 @@
         "class MB(MovimientoBrowniano):\n",
         "\n",
         "  def __init__(self, N, mu, sigma, k_0=0):\n",
+        "    '''\n",
+        "    N: número de pasos\n",
+        "    mu: parámetro del proceso MB\n",
+        "    sigma: parámetro del proceso MB\n",
+        "    k_0: valor inicial del proceso MB\n",
+        "    '''\n",
         "    super().__init__(N=N, k_0=k_0)\n",
         "    self.mu = mu\n",
         "    self.sigma = sigma\n",
@@ -276,10 +282,9 @@
         "    self.Wt = None\n",
         "\n",
         "  def simular_mbg(self):\n",
-        "    #self.simular()\n",
         "    t, W_tn = super().calcular_browniano()\n",
+        "    # Aplicamos la definición del MB\n",
         "    self.Wt = self.w_0 + self.mu * t + self.sigma * W_tn\n",
-        "    #print(W_tn)\n",
         "    return t, self.Wt\n",
         "\n",
         "  def plot_browniano(self, T=1):\n",
@@ -348,11 +353,12 @@
     {
       "cell_type": "code",
       "source": [
+        "# Generamos el MB\n",
         "np.random.seed(123)\n",
         "mbg2 = MB(N=1000, mu=1.5, sigma=0.2)\n",
         "tiempo, W_t = mbg2.simular_mbg()\n",
-        "#mbg2.plot_browniano()\n",
         "\n",
+        "# Graficamos la trayectoria junto con la recta\n",
         "plt.figure(figsize=(7, 4))\n",
         "plt.plot(tiempo, W_t, color='navy',label = r'$W(t)$')\n",
         "plt.plot(tiempo, 1.5*np.array(tiempo), color = 'indigo', label = r'Recta $y = 1.5x$')\n",
@@ -397,11 +403,12 @@
     {
       "cell_type": "code",
       "source": [
+        "# Generamos el MB\n",
         "np.random.seed(123)\n",
         "mbg3 = MB(N=1000, mu=-1.5, sigma=0.2)\n",
         "tiempo, W_t = mbg3.simular_mbg()\n",
-        "#mbg3.plot_browniano()\n",
         "\n",
+        "# Graficamos la trayectoria junto con la recta\n",
         "plt.figure(figsize=(7, 4))\n",
         "plt.plot(tiempo, W_t, color='navy', label = r'$W(t)$')\n",
         "plt.plot(tiempo, -1.5*np.array(tiempo), color = 'indigo', label = r'Recta $y = -1.5x$')\n",
@@ -471,16 +478,19 @@
         "import numpy as np\n",
         "import matplotlib.pyplot as plt\n",
         "\n",
+        "# Definimos los parámetros\n",
         "T = 1\n",
         "browniano = [0]\n",
         "N = 1000\n",
         "t = np.linspace(0, T, N)\n",
         "delta = T/N\n",
         "\n",
+        "# Aplicamos incrementos normales\n",
         "for _ in t:\n",
         "  X = np.random.normal()\n",
         "  browniano.append(browniano[-1] + X*np.sqrt(delta))\n",
         "\n",
+        "# Graficamos\n",
         "plt.figure(figsize=(7, 4))\n",
         "plt.plot(t, browniano[:-1], color = 'navy')"
       ],
@@ -609,6 +619,12 @@
         "class MBIN_G(MBEINormales):\n",
         "\n",
         "  def __init__(self, N, mu, sigma, w_0 = 0):\n",
+        "    '''\n",
+        "    N: número de pasos\n",
+        "    mu: parámetro del proceso MB\n",
+        "    sigma: parámetro del proceso MB\n",
+        "    w_0: valor inicial del proceso MB\n",
+        "    '''\n",
         "    super().__init__(N)\n",
         "    self.mu = mu\n",
         "    self.sigma = sigma\n",
@@ -617,6 +633,7 @@
         "\n",
         "  def simular_mb_in_g(self, T=1, N=1000):\n",
         "    t, Wte = super().simular_browniano_in(T, N)\n",
+        "    # Aplicamos la definición de MB\n",
         "    self.Wt = self.w0 + self.mu*t + self.sigma*np.array(Wte)\n",
         "    return t, self.Wt\n",
         "\n",
