--- a/CM2_EhrenfestyRuina.ipynb
+++ b/CM2_EhrenfestyRuina.ipynb
@@ -18,7 +18,6 @@
       "cell_type": "markdown",
       "source": [
         "### Urna de Ehrenfest\n",
-        "![](https://upload.wikimedia.org/wikipedia/commons/thumb/6/6b/Urn_problem_qtl1.svg/250px-Urn_problem_qtl1.svg.png)\n",
         "\n",
         "Supongamos que tenemos dos cajas, etiquetadas con 1 y 2 y además $d$ bolas distribuidas de cierta forma en dichas cajas. Elegiremos un número aleatorio entre 1 y $d$, sacaremos la bola que contenga ese número y la cambiaremos de caja. Definimos $X_n$ como el número de bolas en la caja 1 después de la enésima repetición.\n",
         "\n",
@@ -233,7 +232,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "¿Por qué crees que se dé este comportamiento?"
+        "Este comportamiento se da debido a que el proceso tiende a su media, la cual corresponde a $500$, en este caso."
       ],
       "metadata": {
         "id": "txdVxChDVX-f"
@@ -243,7 +242,6 @@
       "cell_type": "markdown",
       "source": [
         "### Ruina del Jugador\n",
-        "![](https://media.istockphoto.com/id/1158005632/es/foto/el-crupier-sostiene-una-bola-de-ruleta-en-un-casino-en-la-mano.jpg?s=612x612&w=0&k=20&c=8oruAF1PQdov8bHkHcKSuI2dRz6tcuKIlibwNgVY_qc=)\n",
         "\n",
         "Un jugador juega cierto juego de apuestas, en el que gana 1 con probabilidad $p$ y pierde 1 con probabilidad $1-p$ y puede ganar a lo más d. Podemos pensar entonces su dinero en la partida n como una variable aleatoria, entonces obtenemos una sucesión $\\{X_n\\}_{n\\in \\mathbb{N}}$ con la siguiente distribución:\n",
         "\n",
@@ -344,13 +342,7 @@
       "source": [
         "Sin embargo, como ya sabemos simular caminatas aleatorias le agregaremos una condición extra:\n",
         "\n",
-        "Si el apostador llega a tener 0 o N, pierde todo el dinero o se gana todo, respectivamente, entonces el juego se termina. Esto puede escribire de manera probabilista de la siguiente manera:\n",
-        "\n",
-        "$\\mathbb{P}(X_{m} = 0 | X_n = 0) = 1 \\quad \\forall m \\geq n$ \\\\\n",
-        "\n",
-        "$\\mathbb{P}(X_{m} = N | X_n = N) = 1 \\quad \\forall m \\geq n$\n",
-        "\n",
-        "Agregaremos esta condición a nuestra simulación\n",
+        "Si el apostador llega a tener $0$ o $N$, pierde todo el dinero o se gana todo, respectivamente, entonces el juego se termina. Sabemos que esto ocurre con probabilidad 1.\n",
         "\n"
       ],
       "metadata": {
@@ -440,14 +432,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "Nos preguntamos, ¿podrá existir una trayectoria del proceso donde nunca se extinga? Con esto en mente, tenemos la definición del tiempo de primera visita.\n",
-        "\n",
-        "$$T_0 = mín\\{n > 0 : X_n = 0\\}$$ \\\\\n",
-        "$$T_d = mín\\{n > 0 : X_n = d \\}$$\n",
-        "\n",
-        "Se puede probar que $T_0 < \\infty$ o $T_d < \\infty$ con probabilidad 1. Esto quiere decir que siempre se termina el juego en un tiempo finito. Analizaremos el avance del juego dependiendo del monto inicial.\n",
-        "\n",
-        "Definamos\n",
+        "Sabemos que el proceso siempre termina, para ello definamos\n",
         "\n",
         "$$ u_k = \\mathbb{P}(X_{T_0} = 0 | X_0 = k)$$\n",
         "\n",
