--- a/PP1_SimulacióndelProcesoPoisson.ipynb
+++ b/PP1_SimulacióndelProcesoPoisson.ipynb
@@ -19,9 +19,7 @@
       "source": [
         "# Proceso Poisson\n",
         "\n",
-        "Un Proceso de Poisson de tasa $\\lambda$ es un proceso de conteo $\\{N_t\\}_{t\\geq 0}$ donde para cada $t \\geq 0$, se tiene que $N_t \\sim Poi(\\lambda t)$. Usando algunos resultados teóricos veremos dos maneras de simular un Proceso Poisson.\n",
-        "\n",
-        "![](https://upload.wikimedia.org/wikipedia/commons/d/dc/SampleProcess.png)"
+        "Un Proceso de Poisson de tasa $\\lambda$ es un proceso de conteo $\\{N_t\\}_{t\\geq 0}$ donde para cada $t \\geq 0$, se tiene que $N_t \\sim Poi(\\lambda t)$. Usando algunos resultados teóricos veremos dos maneras de simular un Proceso Poisson.\n"
       ],
       "metadata": {
         "id": "qUGVNiO2plP5"
@@ -32,7 +30,7 @@
       "source": [
         "1. Simulación de Procesos Escalonados\n",
         "\n",
-        "Usaremos las funciones $\\texttt{step}$ y $\\texttt{scatter}$ de Matplotlib para graficar procesos escalonados. Supongamos que queremos graficar un proceso de conteo con saltos uniformes, veamos cómo hacer el código."
+        "Veamos cómo graficar funciones escalonadas en Python donde el escalón es punteado. Para esto, usaremos un ciclo para graficar cada escalón."
       ],
       "metadata": {
         "id": "aKppW53JAC0W"
@@ -74,7 +72,7 @@
         "id": "nc2URUPFzy0E",
         "outputId": "1cd28549-03f0-40b3-a1ed-8807f66045e5"
       },
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -121,7 +119,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 9,
+      "execution_count": null,
       "metadata": {
         "id": "1gn-VTyupjDV",
         "colab": {
@@ -239,7 +237,7 @@
       "metadata": {
         "id": "Rv5OW0klFpcV"
       },
-      "execution_count": 14,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -266,7 +264,7 @@
         "id": "-vtck937HLV3",
         "outputId": "89108a80-e616-4ef9-ee62-40fc365fae85"
       },
-      "execution_count": 27,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -304,7 +302,7 @@
         "id": "aBjcHUCPHq4m",
         "outputId": "9ee8baba-029b-4de2-869c-63e9494f1433"
       },
-      "execution_count": 30,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -397,7 +395,7 @@
         "id": "aIclTitC-mUV",
         "outputId": "b67d8be9-134c-4a17-b938-95dfe06584a1"
       },
-      "execution_count": 45,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -478,7 +476,7 @@
       "metadata": {
         "id": "LpavHT1NIsT3"
       },
-      "execution_count": 46,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -505,7 +503,7 @@
         "id": "V-tTxEANJiHS",
         "outputId": "b36b38ca-38a5-4c85-ab63-78a06ce40840"
       },
-      "execution_count": 47,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
